profile image updated

--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -123,7 +123,8 @@
                     <h4 class="text-white my-3">My Portfolio</h4>
                     <hr/>
                     <!-- Profile Section -->
-                    <img src="{% static 'portfolio/profile.jpg' %}" alt="Profile" class="profile-image">
+<!--                     <img src="{% static 'portfolio/profile.jpg' %}" alt="Profile" class="profile-image"> -->
+                        <img src="https://yajitersoo.github.io/jsonapi/Profile%20picture.jpg" alt="Profile" class="profile-image">
                     <hr/>
                     <h5 class="text-white mt-2">Yaji Tersoo</h5>
                     <p class="text-white">Data Analyst | Information Management Specialist | Data Scientist</p>
